--- a/style.css
+++ b/style.css
@@ -131,7 +131,7 @@ section.Imagem > p {
 }
 
 section#img01 {
-    background-image: url('judo.jpg');
+    background-image: url('judo01.jpg');
     background-position: center center;
     background-size: cover;
 }
