--- a/style.css
+++ b/style.css
@@ -46,7 +46,7 @@ header > h1 {
 header > p {
     color: white;
     font-size: 1.5em;
-    font-family: var(--fonte0);
+    font-family: var(--fonte1);
     max-width: 600px;
     padding-right: 10px;
     padding-left: 10px;
@@ -119,25 +119,16 @@ main a:hover {
 
 
 
-img{
-    
-    width: 20vw; 
-    margin-left: 15px;   
+img {
+    width: 35vw; 
+    margin-left: 30%;   
     margin-bottom: 15px;
     margin-right: 5px;
-    border-radius: 50px;
-}
-
-img, p.chile01 {
-    display: inline-block;
-
-}
-
-.container {
-    display: flex;
-    align-items: flex-start;
+    border-radius: 70vw;
     
 }
+
+
 
 section.Imagem {
     background-color: rgb(51, 51, 51);
